# camspy

./: .gitignore  config.yaml  pyproject.toml
camspy/: camera.py  camtest.py  camtest2.py  camtest3.py  config.py  main.py  model.py  process.py  stream.py  utils.py
camspy/lib/: ImageConvert.py
camspy/resources/: config_defaults.yaml
