[project]
name = "camspy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "click-default-group>=1.2.4",
    "distro>=1.9.0",
    "imutils>=0.5.4",
    "numpy>=2.4.1",
    "opencv-python>=4.11.0.86",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "schema>=0.7.8",
    "simple-pid>=2.0.1",
]
